moving buttons closer together

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
   <span>Niklas Semmler</span>
   <div class="w3-right">
     <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
-      <i class="fa fa-linkedin w3-hover-opacity">&nbsp;&nbsp;</i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
     </a>
     <a class="" href="http://github.com/metaswirl" style="text-decoration: none">
-      <i class="fa fa-github w3-hover-opacity">&nbsp;&nbsp;</i>
+      <i class="fa fa-github w3-hover-opacity"></i>
     </a>
     <a class="" href="mailto:niklas.semmler@mailbox.org"
       style="text-decoration: none">
-      <i class="fa fa-at w3-hover-opacity">&nbsp;&nbsp;</i>
+      <i class="fa fa-at w3-hover-opacity"></i>
     </a>
     <!--<img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
       style="width:5%;" class="w3-circle">-->
