--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="#research" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-flask fa-fw w3-margin-right"></i>Research</a> 
-    <a href="#cvitae" onclick="w3_close()"
+    <a href="#cv" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-user fa-fw w3-margin-right"></i>CV</a> 
     <a href="files/nsemmler.vcf"
@@ -80,7 +80,7 @@
 <div class="w3-main" style="margin-left:220px;margin-right:40px">
 
 <!-- About -->
-<div class="w3-container w3-card w3-white w3-margin-bottom" id="services" style="margin-top:75px">
+<div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
   <h1 class="w3-xxxlarge w3-text-red"><b>About.</b></h1>
   <hr style="width:50px;border:5px solid red" class="w3-round">
   <p>I am a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
