--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Experience</h2>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>PhD Candidate / SAP</b></h5>
+    <h5 class="w3-opacity"><b>PhD Candidate / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Nov 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Internship / SAP</b></h5>
+    <h5 class="w3-opacity"><b>Internship / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Nov 2016 - Nov 2017</h6>
     <ul>
