--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
-      <i class="fa fa-th-large fa-fw w3-margin-right"></i>ABOUT</a> 
+      <i class="fa fa-th-large fa-fw w3-margin-right"></i>About</a> 
     <a href="#research" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-flask fa-fw w3-margin-right"></i>Research</a> 
@@ -81,7 +81,7 @@
 
 <!-- About -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>About.</b></h1>
+  <h1 class="w3-xxxlarge w3-text-red"><b>About me</b></h1>
   <hr style="width:50px;border:5px solid red" class="w3-round">
   <p>I am a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
 
@@ -94,7 +94,7 @@
 
 <!-- Research -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="research" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>Research.</b></h1>
+  <h1 class="w3-xxxlarge w3-text-red"><b>My research</b></h1>
   <hr style="width:50px;border:5px solid red" class="w3-round">
 <ul>
   <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
@@ -125,7 +125,7 @@
 
 <!-- Curriculum Vitae -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="cv" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>Curriculum Vitae.</b></h1>
+  <h1 class="w3-xxxlarge w3-text-red"><b>Curriculum Vitae</b></h1>
   <hr style="width:50px;border:5px solid red" class="w3-round">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Experience</h2>
