--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
-    body {font-size:16px;}
-    .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
-    .w3-half img:hover{opacity:1}
+    html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     .pub { margin: 1em 0; }
   </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Navigation Bar -->
-<nav class="w3-sidebar w3-collapse w3-red w3-top w3-animate-left" style="z-index:3;width:200px;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-collapse w3-white w3-card w3-text-grey w3-top w3-animate-left" style="z-index:3;width:200px;overflow: hidden;" id="mySidebar"><br>
   <div class="w3-container">
-    <img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
-    style="width:60%;" class="w3-round"><br><br>
-    <h4><b>NIKLAS SEMMLER</b></h4>
+      <img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
+      style="width:80%;" class="w3-round"><br><br>
+      <div class="w3-container w3-text-black">
+        <h2>Niklas Semmler</h2>
+      </div>
     <!--<p class="w3-text-grey">PhD Candidate</p>-->
     <div class="w3-panel w3-large">
       <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
@@ -53,8 +52,8 @@
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+<header class="w3-container w3-top w3-hide-large w3-teal w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-teal w3-margin-right" onclick="w3_open()">☰</a>
   <span>Niklas Semmler</span>
   <div class="w3-right">
     <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
@@ -81,8 +80,8 @@
 
 <!-- About -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>About me</b></h1>
-  <hr style="width:50px;border:5px solid red" class="w3-round">
+  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-th-large fa-fw
+      w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
   <p>I am a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
 
   <!--<p>The focus of my PhD is set on optimizing datacenter resource usage for big data
@@ -94,8 +93,8 @@
 
 <!-- Research -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="research" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>My research</b></h1>
-  <hr style="width:50px;border:5px solid red" class="w3-round">
+  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-flask fa-fw
+      w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
 <ul>
   <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
@@ -125,10 +124,8 @@
 
 <!-- Curriculum Vitae -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="cv" style="margin-top:75px">
-  <h1 class="w3-xxxlarge w3-text-red"><b>Curriculum Vitae</b></h1>
-  <hr style="width:50px;border:5px solid red" class="w3-round">
-  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw
-      w3-margin-right w3-xxlarge w3-text-teal"></i>Education and Experience</h2>
+  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw
+        w3-margin-right w3-xxlarge w3-text-teal"></i>Curriculum Vitae</h2>
   <div class="w3-container">
     <h5 class="w3-opacity"><b>PhD Candidate / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
@@ -174,7 +171,9 @@
         w3-margin-right"></i>Sep 2007 - July 2019</h6>
     <hr>
   </div>
+</div>
 
+<div class="w3-container w3-card w3-white w3-margin-bottom" id="cv" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-asterisk fa-fw
     w3-margin-right w3-xxlarge w3-text-teal"></i>Skills</h2>
   <div class="w3-row-padding">
