--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <!--<p class="w3-text-grey">PhD Candidate</p>-->
     <div class="w3-panel w3-large">
       <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
-        <i class="fa fa-linkedin w3-hover-opacity">&nbsp;&nbsp;</i>
+        <i class="fa fa-linkedin w3-hover-white">&nbsp;&nbsp;</i>
       </a>
       <a class="" href="http://github.com/metaswirl" style="text-decoration: none">
-        <i class="fa fa-github w3-hover-opacity">&nbsp;&nbsp;</i>
+        <i class="fa fa-github w3-hover-white">&nbsp;&nbsp;</i>
       </a>
       <a class="" href="mailto:niklas.semmler@mailbox.org"
         style="text-decoration: none">
-        <i class="fa fa-at w3-hover-opacity"></i>
+        <i class="fa fa-at w3-hover-white"></i>
       </a>
     </div>
   </div>
@@ -105,9 +105,7 @@
   <li class="pub"><b>Distributed Mega-Datasets: The Need for Novel Computing
       Primitives</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
-    <i>Conference:</i> 2019 IEEE 39th International Conference on
-    Distributed<br>
-    Computing Systems</br>
+    <i>Conference:</i> 2019 IEEE 39th International Conference on Distributed Computing Systems</br>
     <a href="files/nsemmler_2019_icdcs.pdf">
       <i class="fa fa-file-pdf-o"> Download PDF</i>
     </a>
