--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Navigation Bar -->
 <nav class="w3-sidebar w3-collapse w3-white w3-card w3-text-grey w3-top w3-animate-left" style="z-index:3;width:200px;overflow: hidden;" id="mySidebar"><br>
   <div class="w3-container">
-      <img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
+      <img src="pictures/profile.png"
       style="width:80%;" class="w3-round"><br><br>
       <div class="w3-container w3-text-black">
         <h2>Niklas Semmler</h2>
