--- a/index.html
+++ b/index.html
@@ -82,7 +82,17 @@
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-th-large fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
-  <p>I am a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
+  <p>Hi there, I am Niklas a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
+  <p>I focus on data management issues for the future Industrial Internet of
+  Things. If you want to know more, head over to the <a href="#research">research</a>
+  section.</p>
+  <p>During the long run of my PhD I helped to organize an introduction to
+  programming course with ~800 students and became a member in the <a href="https://softwarecampus.de/en/">Software
+    Campus</a>, a German programme that supports PhD with a 2-year leadership
+  programme. You can get more info on my life <a href="#cv">here</a>.</p>
+
+  <p>Personally, I am interested in a wide range of topics and try to write
+  about it on my blog. If you have any questions, don't hesitate to send me a mail.</p>
 
   <!--<p>The focus of my PhD is set on optimizing datacenter resource usage for big data
   analytics. I habe been involved in the Berlin Big Data Center, where I worked
@@ -95,6 +105,11 @@
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="research" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-flask fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
+<iframe width="560" height="315"
+  src="https://www.youtube.com/embed/ZiW9jMFYj-4" frameborder="0"
+  allow="accelerometer; autoplay; encrypted-media; gyroscope;
+  picture-in-picture" allowfullscreen></iframe><br>
+
 <ul>
   <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
@@ -145,7 +160,8 @@
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Dec 2014 - Nov 2016</h6>
     <ul>
-      <li>Alumni of the Software Campus programme.
+      <li>Alumni of the <a href="https://softwarecampus.de/en/">Software
+    Campus</a> programme.
       <li>Teaching Assistant for the course fundamentals of programming in C
         (~800 students).
     </ul>
