--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
   programme. You can get more info on my life <a href="#cv">here</a>.</p>
 
   <p>Personally, I am interested in a wide range of topics and try to write
-  about it on my blog. If you have any questions, don't hesitate to send me a mail.</p>
+  about it on my blog. If you have any questions, don't hesitate to send me a
+  <a href="mailto:niklas.semmler@mailbox.org">mail</a>.</p>
 
   <!--<p>The focus of my PhD is set on optimizing datacenter resource usage for big data
   analytics. I habe been involved in the Berlin Big Data Center, where I worked
