--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
   <p>During the long run of my PhD I helped to organize an introduction to
   programming course with ~800 students and became a member in the <a href="https://softwarecampus.de/en/">Software
     Campus</a>, a German programme that supports PhD with a 2-year leadership
-  programme. You can get more info on my life <a href="#cv">here</a>.</p>
+  programme. As member of the <a href="http://www.bbdc.berlin/home/">Berlin Big
+  Data Center (BBDC)</a> I studied the performance of Apache Flink for straggling
+  tasks.
+  You can get more info on my life <a href="#cv">here</a>.</p>
 
   <p>Personally, I am interested in a wide range of topics and try to write
   about it on my blog. If you have any questions, don't hesitate to send me a
@@ -144,6 +147,10 @@
     <h5 class="w3-opacity"><b>PhD Candidate / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Nov 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+    <ul>
+      <li>Study of adaptive replication on the basis of real-world ERP database
+        trace.
+    </ul>
     <hr>
   </div>
   <div class="w3-container">
@@ -165,27 +172,36 @@
     Campus</a> programme.
       <li>Teaching Assistant for the course fundamentals of programming in C
         (~800 students).
+        <li>Research assistant in the <a
+            href="http://www.bbdc.berlin/home/">Berlin Big Data Center
+            (BBDC)</a> with focus on
+        improving the performance of Apache Flink in widely distributed scenarios.
     </ul>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Master / EIT (TU Berlin, KTH Stockholm)</b></h5>
+    <h5 class="w3-opacity"><b>Master / EIT</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Oct 2012 - Oct 2014</h6>
+    <ul>
+      <li>Master thesis on translating router configurations between devices at
+        Cisco (previously Tail-f).
+      <li>First year at TU Berlin, second year at KTH in Stockholm.
+    </ul>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Bachelor / Universiteit van Amsterdam</b></h5>
+    <h5 class="w3-opacity"><b>Bachelor / Netherlands</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
-        w3-margin-right"></i>Sep 2009 - July 2011</h6>
+        w3-margin-right"></i>Sep 2007 - July 2011</h6>
     <hr>
   </div>
-  <div class="w3-container">
-    <h5 class="w3-opacity"><b>Bachelor / Radboud Univeriteit Nijmegen</b></h5>
-    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
-        w3-margin-right"></i>Sep 2007 - July 2019</h6>
+    <ul>
+      <li>Bachelor thesis on modelling movement patterns of a slime mold (an
+        acelluar organism).
+      <li>First two years at RU (Nijmegen), last two years at UvA (Amsterdam).
+    </ul>
     <hr>
-  </div>
 </div>
 
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="cv" style="margin-top:75px">
